# accessibility-auditor

./: .gitignore  .hfignore  Dockerfile  README.md  SUBMISSION_CHECKLIST.md  __init__.py  client.py  inference.py  models.py  openenv.yaml  pyproject.toml
fixtures/sites/easy/: missing-alt-text.html  no-form-labels.html  poor-contrast.html
fixtures/sites/hard/: complex-navigation.html  dynamic-content.html  incomplete-landmarks.html
fixtures/sites/medium/: aria-issues.html  heading-hierarchy.html  keyboard-trap.html
graders/: __init__.py  accessibility_grader.py
scripts/: validate-submission.sh
server/: Dockerfile  __init__.py  accessibility_auditor_environment.py  app.py  axe_runner.py  browser_manager.py  requirements.txt  test_runners.py
